@@ -14,10 +14,10 @@ index 772bd2a7ea..2b345c854c 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 75e1b8d8a2..b17a900bf1 100644
+index 0a13c47a32..b81c5acd5e 100644
 --- a/Changes
 +++ b/Changes
-@@ -539,6 +539,16 @@ OCaml 5.0
+@@ -543,6 +543,16 @@ OCaml 5.0
  - #11417: Fix regression allowing virtual methods in non-virtual classes.
    (Leo White, review by Florian Angeletti)
  
@@ -34,7 +34,7 @@ index 75e1b8d8a2..b17a900bf1 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -574,13 +584,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -578,13 +588,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -50,7 +50,7 @@ index 75e1b8d8a2..b17a900bf1 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -684,6 +694,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -688,6 +698,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -60,7 +60,7 @@ index 75e1b8d8a2..b17a900bf1 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -943,6 +956,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -947,6 +960,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -7608,7 +7608,7 @@ index 0000000000..2de217ced9
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..750f594380
+index 0000000000..96ac06be01
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,7549 @@
@@ -7628,10 +7628,10 @@ index 0000000000..750f594380
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 75e1b8d8a2..b17a900bf1 100644
++index 0a13c47a32..b81c5acd5e 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -539,6 +539,16 @@ OCaml 5.0
++@@ -543,6 +543,16 @@ OCaml 5.0
 + - #11417: Fix regression allowing virtual methods in non-virtual classes.
 +   (Leo White, review by Florian Angeletti)
 + 
@@ -7648,7 +7648,7 @@ index 0000000000..750f594380
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -574,13 +584,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -578,13 +588,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -7664,7 +7664,7 @@ index 0000000000..750f594380
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -684,6 +694,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -688,6 +698,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -7674,7 +7674,7 @@ index 0000000000..750f594380
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -943,6 +956,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -947,6 +960,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
